--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ajv": "^6.12.6",
     "ajv-keywords": "^3.5.2",
     "emailjs-com": "^3.2.0",
+    "lottie-react": "^2.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
